Fix arrow button alignment for Firefox

--- a/src/common/components/eventCard/eventCard.module.scss
+++ b/src/common/components/eventCard/eventCard.module.scss
@@ -108,6 +108,7 @@ $imageWidth: 6.375rem;
   .buttonWrapper {
     padding-left: 0.625rem;
     align-self: center;
+    align-items: center;
 
     button {
       height: $iconButtonSize;
